@@ -3,6 +3,8 @@ Revision history for JSON-Relaxed
 0.000
 
 	- Use TO_JSON or FREEZE method to serialize objects.
+	- Allow conversion of Data::Properties data (requires
+	  ChordPro::Config::Properties).
 
 0.096	2024-06-17
 
